install-operators/operators/tpa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustification
  labels:
    app: tpa-service
    managed-by: kustomize
