install-operators/operators/tpa/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tpa-service
  namespace: trustification
  labels:
    app: tpa-service
    managed-by: kustomize
spec:
  to:
    kind: Service
    name: tpa-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
